--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,13 @@
 plugins {
-	id 'fabric-loom' version '1.6-SNAPSHOT'
+	id 'fabric-loom' version "1.6.5"
 	id 'maven-publish'
+	id "com.github.breadmoirai.github-release" version "2.2.12"
+	id "com.matthewprenger.cursegradle" version "1.4.0"
+	id "com.modrinth.minotaur" version "2.+"
+	id "elect86.gik" version "0.0.4"
 }
 
-version = project.mod_version
+version = "$project.mod_version+mc$project.minecraft_version"
 group = project.maven_group
 
 base {
@@ -31,18 +35,6 @@ repositories {
 	}
 }
 
-loom {
-    splitEnvironmentSourceSets()
-
-	mods {
-		"template-mod" {
-			sourceSet sourceSets.main
-			sourceSet sourceSets.client
-		}
-	}
-
-}
-
 dependencies {
 	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:$project.minecraft_version"
@@ -50,15 +42,22 @@ dependencies {
 	modImplementation "net.fabricmc:fabric-loader:$project.loader_version"
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
+	modImplementation include(fabricApi.module("fabric-api-base", project.fabric_api_version))
+	modImplementation include(fabricApi.module("fabric-command-api-v2", project.fabric_api_version))
 	modImplementation "net.fabricmc.fabric-api:fabric-api:$project.fabric_api_version"
 
+	implementation include("org.spongepowered:configurate-core:$project.configurate_version")
+	implementation include("org.spongepowered:configurate-hocon:$project.configurate_version")
+	include("io.leangen.geantyref:geantyref:$project.geantyref_version")
+	include("com.typesafe:config:$project.hocon_version")
 
-	modCompileOnly("maven.modrinth:sodium:$project.sodium_version")
-//	modCompileOnly("maven.modrinth:starlight:$project.starlight_version")
-//	modCompileOnly("ca.stellardrift:confabricate:$project.confabricate_version")
 
-	modImplementation("me.shedaniel.cloth:cloth-config-fabric:$project.cloth_config_version")
-	modImplementation("com.terraformersmc:modmenu:$project.mod_menu_version")
+	modCompileOnly "maven.modrinth:sodium:$project.sodium_version"
+	modCompileOnly "maven.modrinth:starlight:$project.starlight_version"
+	modCompileOnly "ca.stellardrift:confabricate:$project.confabricate_version"
+
+	modImplementation "me.shedaniel.cloth:cloth-config-fabric:$project.cloth_config_version"
+	modImplementation "com.terraformersmc:modmenu:$project.mod_menu_version"
 }
 
 processResources {
@@ -75,6 +74,7 @@ processResources {
 
 tasks.withType(JavaCompile).configureEach {
 	it.options.release = 21
+	it.options.encoding = "UTF-8"
 }
 
 java {
@@ -82,9 +82,12 @@ java {
 	// if it is present.
 	// If you remove this line, sources will not be generated.
 	withSourcesJar()
-
 	sourceCompatibility = JavaVersion.VERSION_21
 	targetCompatibility = JavaVersion.VERSION_21
+}
+
+tasks.withType(AbstractArchiveTask).configureEach {
+	archiveBaseName.set(project.archives_base_name)
 }
 
 jar {
