--- a/gradle.properties
+++ b/gradle.properties
@@ -1,23 +1,25 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
-org.gradle.parallel=true
+#org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21
-yarn_mappings=1.21+build.1
-loader_version=0.15.11
+minecraft_version = 1.21
+yarn_mappings = 1.21+build.1
+loader_version = 0.15.11
 
 # Mod Properties
-mod_version=1.0.0
-maven_group=ppl.beacon
-archives_base_name=template-mod
+mod_version = 1.0.0
+maven_group = ppl.beacon
+archives_base_name = beacon-mod
 
 # Dependencies
 fabric_api_version = 0.100.1+1.21
 cloth_config_version = 15.0.127
 mod_menu_version = 11.0.0-rc.4
 sodium_version = mc1.21-0.5.9
-#starlight_version =
-#confabricate_version =
-#configurate_version =
+starlight_version = 1.1.3+1.20.3
+confabricate_version = 2.1.0
+configurate_version = 4.1.2
+geantyref_version = 1.3.13
+hocon_version = 1.4.2
